<resources>
    <string name="app_name">BelajarMOV</string>
    <string name="lewati_button">Lewati Perkenalan</string>
    <string name="masuk_button">LANJUTKAN</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui film yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan update film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Gunakan e-wallet untuk transaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="daftar_akun_baru">Daftar Akun Baru</string>
    <string name="Sign_up">Sign Up</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="Nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="photo">Photo</string>
    <string name="simpan_dan_lanjutkan">Simpan dan Lanjutkan</string>
    <string name="upload_nanti">Upload Nanti</string>
    <string name="welcome">Welcome,\nAinul Yaqin</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="checkout">Checkout</string>
    <string name="simpan_data">"Simpan Data Baru "</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_history">My History</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
